# saleor-flat-tax-plugin

./: .gitignore  LICENSE  README.md  pyproject.toml
saleor_flat_tax_plugin/: __init__.py  plugin.py
